# Forest-temperature-monitor

./: .gitignore  .replit  README.md  RENDER_DEPLOYMENT.md  app.py  install_dependencies.sh  package_list.txt  pyproject.toml  render.yaml  render_build.sh  requirements.txt  requirements.txt.github  requirements_render.txt
.github/workflows/: deploy.yml
.streamlit/: config.toml
code_export/: app.py
temp_export/: pyproject.toml  render.yaml  render_build.sh  requirements.txt.github  requirements_render.txt
temp_export/utils/: data_fetcher.py  visualization_streamlit.py
utils/: data_fetcher.py  visualization.py
