[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.43.2",
    "plotly>=6.0.1",
    "requests>=2.32.3",
]
