[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium==0.14.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "streamlit-folium==0.15.0",
    "streamlit==1.32.0",
    "plotly==5.18.0",
    "requests==2.31.0",
    "trafilatura==1.6.0",
]
